searchbar placeholder changed

--- a/frontend/src/app/navbar/top-navbar/top-navbar.component.html
+++ b/frontend/src/app/navbar/top-navbar/top-navbar.component.html
@@ -8,7 +8,7 @@
         <input 
           type="text"
           class="form-control"
-          placeholder="Search a course"
+          placeholder="Enter a keyword"
           [(ngModel)]="searchValue"
           (input)="onSearchBoxChange()">
         <i class="fa fa-search mt-1"></i>
