--- a/frontend/src/app/student-module/components/student-courses/student-courses.component.html
+++ b/frontend/src/app/student-module/components/student-courses/student-courses.component.html
@@ -14,6 +14,6 @@
       </mat-card>
     </div>
   </div>
-  <a routerLink="/course/courses" class="float-end mt-3"><h1>more...</h1></a>
+  <a routerLink="/course/courses" class="float-end mt-3"><h1>more..</h1></a>
 </div>
 <div *ngIf="loaderService.isProcessing" class="loading"></div>
